--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/marked": "^4.0.7",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -16,6 +17,7 @@
     "cheerio": "^1.0.0-rc.12",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "marked": "^4.2.3",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
